bin_PROGRAMS=zsprojection
zsprojection_SOURCES= ZS_Boundary.cpp ZS_Boundary.h ZS_Control.cpp \
	ZS_Control.h ZS_Kernel.cpp ZS_Kernel.h \
	ZS_NeighbourList.cpp ZS_NeighbourList.h ZS_Particles.cpp \
	ZS_Particles.h ZS_Physics.cpp ZS_Physics.h \
	ZS_Projection.cpp ZS_Projection.h ZS_SPH_Projection.cpp
